<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="features.auth.fragments.RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="168dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="7sp"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:text="@string/app_name" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/app_name_text"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:visibility="gone"/>
    </RelativeLayout>

    <TextView
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginTop="59dp"
        android:lineSpacingExtra="7sp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/Create_account" />

    <TextView
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="7sp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:text="@string/Register_help" />

    <EditText
        android:id="@+id/nick_reg"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="20dp"
        android:hint="Crimson"
        android:background="@drawable/filed" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="20dp"
        android:hint="email@domain.com"
        android:background="@drawable/filed" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="20dp"
        android:hint="(+7XXXXXXXXXX)"
        android:inputType="phone"
        android:background="@drawable/filed" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="20dp"
        android:hint="qwerty#123"
        android:background="@drawable/filed" />

    <Button
        android:id="@+id/button_enter_reg"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_neon_purple"
        app:backgroundTint="@color/purple_500"
        android:text="@string/Log_in_button"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:cornerRadius="14dp" />

    <ImageView
        android:layout_width="327dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/or"/>

    <Button
        android:id="@+id/register_enter_reg"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/grey"
        android:text="@string/Sign_in"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:cornerRadius="14dp" />

    <TextView
        android:layout_width="327dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="7sp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:text="@string/Terms_of_service" />
</LinearLayout>